SOCPlayer: Integer.valueOf in places not addig new Integer to a collection